# MyConfigs

./: .gitignore
docker/: How_to_use.md
docker/AI_pytorch/: Dockerfile  docker-compose.yml
docker/AI_pytorch/config/: zshrc
docker/AI_pytorch/config/nvim/: init.lua  lazy-lock.json
docker/ROS/: .zshrc  Dockerfile.ros  docker-compose.yml  ros1.Dockerfile  ros2.Dockerfile  start_ros.sh
docker/ROS/config/: p10k.zsh  zshrc
docker/ROS/config/nvim/: lazy-lock.json
docker/ROS/ros_ws/log/: latest_build
docker/ROS2/: Dockerfile.ros  docker-compose.yml
docker/ROS2/config/: zshrc
docker/ROS2/config/nvim/: lazy-lock.json
docker/ROS_noetic/: Dockerfile.ros  start_ros.sh
docker/ROS_noetic (Copy)/: Dockerfile.ros  docker-compose.yml  start_ros.sh
docker/ROS_noetic (Copy)/config/: zshrc
docker/ROS_noetic (Copy)/config/nvim/: lazy-lock.json
docker/ROS_noetic/config/nvim/: lazy-lock.json
docker/ros_test/: docker-compose.yml  ros1.Dockerfile  ros2.Dockerfile
docker/ros_test/src/ros1_publisher/: CMakeLists.txt
docker/ros_test/src/ros1_publisher/src/: publisher.cpp
docker/ros_test/src/ros2_subscriber/: CMakeLists.txt
docker/ros_test/src/ros2_subscriber/src/: subscriber.cpp
dotfiles/hyprland/.config/hypr/: hypridle.conf  hyprland.conf
dotfiles/hyprlock/.config/hypr/: hyprlock.conf
dotfiles/i3/.config/i3/: config
dotfiles/kitty/.config/kitty/: kitty.conf  kitty.conf.bak
dotfiles/picom/.config/picom/: picom.conf
dotfiles/polybar/.config/polybar/: config.ini
dotfiles/tmux/: .tmux.conf
dotfiles/zshrc/: .zshrc
excutables/: install-tools.sh
(+977 files in other folders)
